style.css
html, body {
  margin: 0;
}
html {
  background-color: #000000;
  padding: 10px 10px 30px 10px;
  color: #ccc;
  z-index: 0;
}
body {
	
}

.container {
	overflow-wrap: break-word;
	width: 82%;
	z-index:0;
}

.title_hero {
    color: #28FE14;
    font-family:"Bitstream Vera Sans Mono", "Andale Mono", "Lucida Console", Monaco, monospace;
    /*font-size: 1em;*/
    font-size: 16px;
}

#unfocused {
	color: white;
	-webkit-animation: none;
	-moz-animation: none;
	-ms-animation: none;
	-o-animation: none;
	animation: none;
}

#noblink {
	-webkit-animation: none;
	-moz-animation: none;
	-ms-animation: none;
	-o-animation: none;
	animation: none;
}

.typed-cursor {
	color: #28FE14;
	-webkit-animation: 1.3s blink step-end infinite;
	-moz-animation: 1.3s blink step-end infinite;
	-ms-animation: 1.3s blink step-end infinite;
	-o-animation: 1.3s blink step-end infinite;
	animation: 1.3s blink step-end infinite;
	position: absolute;
}

.highlighted {
	background-color: #28FE14;
	color: black;
}

#textinput {
	position: absolute;
	opacity: 0;
	width: 100%;
	height: 20px;
	margin: 0 auto;
	z-index: -99;
	left: -50px;
	right: 0px;
	top: 0px;
	bottom: 0px;
	display: none;
	font-size: 0px;
	color: #000;
	overflow: hidden;
}

#mobile_helper {
	position:fixed;
	opacity: 0.4;
	display: none;
	left: 0px;
	right: 0px;
	top: 0px;
	bottom: 0px;
	background-color: #DFDFDF;
	width: 100%;
	height: 100%;
	margin: 0 auto;
	text-align: center;
	font-size: 40px;
	font-family: 'Arial';
	color: #000000;
	
}
.va {
	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
}
.centered {
	text-align: center;
}

#cmdList {
	/*height: auto;
	width: auto;*/
	padding: 10px;
	background-color:lightgray;
	opacity: 0.8;
	display: none;
	position: fixed;
	right: 0px;
	top: 0px;
	bottom: 0px;
	margin: 0px;
	border-left: 2px solid white;
	z-index: 0;
	color: blue;
}

#contactmenu_container {
	position: fixed;
	bottom: 0px;
	right: 0px;
	text-decoration: none;
	text-align: right;
	padding-left: 10px;
	padding-right: 10px;
	display: none;
	z-index: 999;
}

#contactmenu_container span {
	text-decoration: none;
	color: black;
	cursor: pointer;
}

#contactmenu_container span:hover {
	color: white;
}

@keyframes blink {
    from,to { opacity:0; }
    50% { opacity:1; }
}
@-webkit-keyframes blink{
    from,to { opacity:0; }
    50% { opacity:1; }
}
@-moz-keyframes blink{
    from,to { opacity:0; }
    50% { opacity:1; }
}
@-ms-keyframes blink{
    from,to { opacity:0; }
    50% { opacity:1; }
}
@-o-keyframes blink{
    from,to { opacity:0; }
    50% { opacity:1; }
}

.element {
	white-space:pre;
	line-height: 140%;
}

